<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/radius"
    android:foreground="@drawable/ripple"
    android:padding="16dp">

    <EditText
        android:id="@+id/who"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/who" />

    <EditText
        android:id="@+id/cashIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:layout_below="@+id/who"
        android:hint="@string/cashIn"
        android:inputType="numberDecimal"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/btcQuantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:layout_below="@+id/cashIn"
        android:hint="@string/btcQuantity"
        android:inputType="numberDecimal"
        android:layout_alignParentStart="true"/>
</RelativeLayout>